# pitfalls-of-internet-security

00/: Containerfile  app.py  compose.yml  pyproject.toml  solve.py
01/: Containerfile  app.py  compose.yml  confidential.txt  pyproject.toml  solve.py
01/notes/: My_Family_Tea_Recipe.txt
01/templates/: create.html  index.html  layout.html  note.html
02/: Containerfile  app.py  compose.yml  pyproject.toml  s.txt  solve.py
02/templates/: course.html  create.html  index.html  layout.html  login.html
03/: compose.yml  solve.py
03/client/: Containerfile  handler.py  pyproject.toml
03/src/: Containerfile  app.py  pyproject.toml
03/src/templates/: admin.html  index.html  layout.html  login.html  post_detail.html  register.html
04/: compose.yml  solve.py
04/client/: handler.py
04/src/: Containerfile  app.py  pyproject.toml
04/src/static/: meditation.js  register_meditation.js
04/src/templates/: index.html  layout.html  login.html  meditation.html  register.html  space.html  space_edit.html
05/: compose.yml  solve.py
05/src/: Containerfile  app.py  pyproject.toml
05/src/templates/: admin_config.html  converter.html  history.html  import.html  index.html  layout.html  login.html  register.html
